--- a/web-flair/app/sass/blocks/main-services/_main-services.sass
+++ b/web-flair/app/sass/blocks/main-services/_main-services.sass
@@ -13,12 +13,13 @@
 	margin-top: 90px
 
 .main-services__more-info
-	margin-top: 115px
+	margin-top: 15px
 
 .main-services__banner
 	position: relative
 	margin-bottom: -150px
 	height: calc(100vh - 140px)
+	background-repeat: no-repeat
 
 .main-services__banner-content
 	position: absolute
@@ -34,3 +35,9 @@
 	justify-content: center
 	align-items: center
 	padding: 0 15px
+
+.field_error_container 
+	color: red
+	font-size: 14px
+	font-style: italic
+	margin-bottom: 10px
