--- a/web-flair/app/sass/blocks/more-info/_more-info.sass
+++ b/web-flair/app/sass/blocks/more-info/_more-info.sass
@@ -47,3 +47,15 @@
 .more-info__price
 	font-size: 36px
 	font-family: $bold
+
+.more-info__include_text
+	font-size: 14px
+	font-family: $semi-bold
+	font-style: italic
+
+.more-info__list_steps
+	padding-left: 15px
+	li 
+		font-family: $semi-bold
+		list-style: decimal
+
