--- a/web-flair/app/sass/blocks/orders-table/_orders-table.sass
+++ b/web-flair/app/sass/blocks/orders-table/_orders-table.sass
@@ -68,10 +68,18 @@
 	text-transform: uppercase
 
 .orders-table__quick-link
-	left: 32px
+	left: 0px
 	position: absolute
 	bottom: -25px
 
+.orders-table__remove-link
+	color: red
+	right: 0px
+	position: absolute
+	bottom: -25px
+
+	&:hover
+		color: red
 
 .orders-table__header-row
 	display: -webkit-flex
@@ -79,3 +87,4 @@
 	display: -ms-flex
 	display: -o-flex
 	display: flex
+
