--- a/web-flair/app/sass/blocks/product-info/_product-info.sass
+++ b/web-flair/app/sass/blocks/product-info/_product-info.sass
@@ -160,6 +160,10 @@
 	flex: 0 0 78%
 	margin-bottom: 20px
 
+.product-info__form-button_sold_out
+	&:hover
+		cursor: default
+
 .product-info__pay-text
 	background-color: #f7f7f7
 	border: 1px solid $gray
