--- a/web-flair/app/sass/main.sass
+++ b/web-flair/app/sass/main.sass
@@ -119,6 +119,10 @@
 
 @import "blocks/reviews/reviews"
 
+@import "blocks/anchors/anchors"
+
+@import "blocks/designers/designers"
+
 
 ////////////////////////////////////////
 
